# neybor-conversion-v2

./: .env.example  .gitignore  README.md  constraints.txt  pyproject.toml
data/: convert_to_csv.py
docs/: INTERPRETING_PIPELINE_OUTPUTS.md  SOLVENCY_LAYER_GAPS.md
reports/figures/: logreg_holdout_shap_global_importance.csv  logreg_holdout_shap_local_drivers.csv  random_forest_holdout_shap_global_importance.csv  random_forest_holdout_shap_local_drivers.csv  solvency_csv_rerun_logreg_holdout_shap_global_importance.csv  solvency_csv_rerun_logreg_holdout_shap_local_drivers.csv
reports/tables/: solvency_csv_rerun_model_run_summary.json
scripts/: audit_columns.py  freeze_snapshot.py  run_pipeline.py  thesis_artifacts.py
src/neybor/: __init__.py  config.py  fairness.py
src/neybor/calibration/: __init__.py  reliability.py
src/neybor/data/: __init__.py  clean.py  join.py  schema.py  solvency.py
src/neybor/explain/: __init__.py  shap_global.py  shap_local.py  sklearn_design.py
src/neybor/features/: __init__.py  engineered.py  leakage.py  missingness.py  pipeline.py
src/neybor/io/: __init__.py  salesforce.py  snapshot.py
src/neybor/uplift/: __init__.py  decile_simulation.py
tests/: conftest.py  test_clean.py  test_features.py  test_join.py  test_leakage.py  test_model_selection.py  test_pipeline_smoke.py  test_solvency_join.py  test_temporal_split.py
